--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -20,10 +20,28 @@
                 <h4>
                     {{product.name}}
                     <span class="badge badge-pill badge-primary float-right">
-{{ product.price | currency:"USD":"symbol":"2.2-2" }}
+                    {{ product.price | currency:"USD":"symbol":"2.2-2" }}
 </span>
                 </h4>
                 <div class="card-text bg-white p-1">{{product.description}}</div>
+            </div>
+
+            <div class="form-inline float-left mr-1">
+                <select class="form-control" [value]="productsPerPage"
+                        (change)="changePageSize($event.target.value)">
+                    <option value="3">3 per Page</option>
+                    <option value="4">4 per Page</option>
+                    <option value="6">6 per Page</option>
+                    <option value="8">8 per Page</option>
+                </select>
+            </div>
+
+            <div class="btn-group float-right">
+                <button *counter="let page of pageCount" (click)="changePage(page)"
+                        class="btn btn-outline-primary"
+                        [class.active]="page == selectedPage">
+                    {{page}}
+                </button>
             </div>
         </div>
 
